feat: token percentage display and context length error detection (#530)
* feat: [US-001] - Add token percentage calculation to InputBox

* feat: [US-002] - Display token percentage with conditional styling

* feat: [US-003] - Add context length error detection function

* feat: [US-004] - Add i18n key for context length error

* feat: [US-005] - Integrate context length error detection in MessageErrTips

* fix: use full i18n key for context length error to ensure correct translations

* fix: show original error details for context length exceeded errors

--- a/src/renderer/i18n/locales/en/translation.json
+++ b/src/renderer/i18n/locales/en/translation.json
@@ -153,6 +153,7 @@
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.",
   "Content": "Content",
   "Context": "Context",
+  "context length exceeded tips": "Your conversation has exceeded the model's context limit. Try compressing the conversation, starting a new chat, or reducing the number of context messages in settings.",
   "Context Management": "Context Management",
   "Context messages": "Context messages",
   "Context Priority: Preserves more context, uses more tokens": "Context Priority: Preserves more context, uses more tokens",
@@ -752,6 +753,7 @@
   "You have multiple licenses. Please select one to use:": "You have multiple licenses. Please select one to use:",
   "You have no more Chatbox AI quota left this month.": "You have no more Chatbox AI quota left this month.",
   "You have unsaved changes. Exiting will discard these changes.": "You have unsaved changes. Exiting will discard these changes.",
+  "Your conversation has exceeded the model's context limit. Try compressing the conversation, starting a new chat, or reducing the number of context messages in settings.": "Your conversation has exceeded the model's context limit. Try compressing the conversation, starting a new chat, or reducing the number of context messages in settings.",
   "Your current plan does not support advanced file processing. Upgrade plan to get enhanced file processing capabilities.": "Your current plan does not support advanced file processing. Upgrade plan to get enhanced file processing capabilities.",
   "Your HTML content has been published. You can access it via the link below.": "Your HTML content has been published. You can access it via the link below.",
   "Your license has expired.": "Your license has expired.",
