feat: update img tool ui; i18n

--- a/src/renderer/i18n/locales/ar/translation.json
+++ b/src/renderer/i18n/locales/ar/translation.json
@@ -256,6 +256,7 @@
   "Disabled": "معطل",
   "Discard Changes": "تجاهل التغييرات",
   "Discard Changes?": "تجاهل التغييرات؟",
+  "Dismiss": "تجاهل",
   "display": "العرض",
   "Display": "عرض",
   "Display Settings": "إعدادات العرض",
@@ -812,6 +813,7 @@
   "Untitled": "بلا عنوان",
   "Update Available": "تحديث متاح",
   "Upgrade": "ترقية",
+  "Upload": "رفع",
   "Upload failed: {{error}}": "فشل التحميل: {{error}}",
   "Upload Image": "تحميل الصورة",
   "Upload Reference Image": "تحميل صورة مرجعية",
