--- a/src/renderer/i18n/locales/de/translation.json
+++ b/src/renderer/i18n/locales/de/translation.json
@@ -256,6 +256,7 @@
   "Disabled": "Deaktiviert",
   "Discard Changes": "Änderungen verwerfen",
   "Discard Changes?": "Änderungen verwerfen?",
+  "Dismiss": "Schließen",
   "display": "Anzeige",
   "Display": "Anzeigen",
   "Display Settings": "Anzeigeeinstellungen",
@@ -813,6 +814,7 @@
   "Untitled": "Unbenannt",
   "Update Available": "Update verfügbar",
   "Upgrade": "Upgrade",
+  "Upload": "Hochladen",
   "Upload failed: {{error}}": "Upload fehlgeschlagen: {{error}}",
   "Upload Image": "Bild hochladen",
   "Upload Reference Image": "Referenzbild hochladen",
