--- a/src/renderer/i18n/locales/en/translation.json
+++ b/src/renderer/i18n/locales/en/translation.json
@@ -224,6 +224,7 @@
   "Disabled": "Disabled",
   "Discard Changes": "Discard Changes",
   "Discard Changes?": "Discard Changes?",
+  "Dismiss": "Dismiss",
   "Display": "Display",
   "Display Settings": "Display Settings",
   "Document Parser": "Document Parser",
@@ -712,6 +713,7 @@
   "Update Available": "Update Available",
   "Upgrade": "Upgrade",
   "Upgrade to use server parsing": "Upgrade to use server parsing",
+  "Upload": "Upload",
   "Upload failed: {{error}}": "Upload failed: {{error}}",
   "Upload Image": "Upload Image",
   "Upload Reference Image": "Upload Reference Image",
