--- a/src/renderer/i18n/locales/es/translation.json
+++ b/src/renderer/i18n/locales/es/translation.json
@@ -256,6 +256,7 @@
   "Disabled": "Deshabilitado",
   "Discard Changes": "Descartar cambios",
   "Discard Changes?": "¿Descartar cambios?",
+  "Dismiss": "Descartar",
   "display": "mostrar",
   "Display": "Mostrar",
   "Display Settings": "Ajustes de visualización",
@@ -812,6 +813,7 @@
   "Untitled": "Sin título",
   "Update Available": "Actualización disponible",
   "Upgrade": "Actualizar",
+  "Upload": "Subir",
   "Upload failed: {{error}}": "Error al cargar: {{error}}",
   "Upload Image": "Subir imagen",
   "Upload Reference Image": "Subir imagen de referencia",
