--- a/src/renderer/i18n/locales/fr/translation.json
+++ b/src/renderer/i18n/locales/fr/translation.json
@@ -256,6 +256,7 @@
   "Disabled": "Désactivé",
   "Discard Changes": "Rapports d'erreurs",
   "Discard Changes?": "Annuler les modifications ?",
+  "Dismiss": "Ignorer",
   "display": "affichage",
   "Display": "Affichage",
   "Display Settings": "Paramètres d'affichage",
@@ -813,6 +814,7 @@
   "Untitled": "Sans titre",
   "Update Available": "Mise à jour disponible",
   "Upgrade": "Mettre à niveau",
+  "Upload": "Téléverser",
   "Upload failed: {{error}}": "Échec de l'envoi : {{error}}",
   "Upload Image": "Télécharger une image",
   "Upload Reference Image": "Charger une image de référence",
