--- a/src/renderer/i18n/locales/it-IT/translation.json
+++ b/src/renderer/i18n/locales/it-IT/translation.json
@@ -255,6 +255,7 @@
   "Disabled": "Disabilitato",
   "Discard Changes": "Scarta modifiche",
   "Discard Changes?": "Scartare le modifiche?",
+  "Dismiss": "Ignora",
   "display": "visualizza",
   "Display": "Visualizza",
   "Display Settings": "Impostazioni di visualizzazione",
@@ -810,6 +811,7 @@
   "Untitled": "Senza titolo",
   "Update Available": "Aggiornamento disponibile",
   "Upgrade": "Fai l'upgrade",
+  "Upload": "Carica",
   "Upload failed: {{error}}": "Caricamento fallito: {{error}}",
   "Upload Image": "Carica immagine",
   "Upload Reference Image": "Carica immagine di riferimento",
