--- a/src/renderer/i18n/locales/ja/translation.json
+++ b/src/renderer/i18n/locales/ja/translation.json
@@ -256,6 +256,7 @@
   "Disabled": "無効",
   "Discard Changes": "変更を破棄",
   "Discard Changes?": "変更を破棄しますか？",
+  "Dismiss": "閉じる",
   "display": "表示",
   "Display": "表示",
   "Display Settings": "表示設定",
@@ -813,6 +814,7 @@
   "Untitled": "無題",
   "Update Available": "更新が利用可能",
   "Upgrade": "アップグレード",
+  "Upload": "アップロード",
   "Upload failed: {{error}}": "アップロードに失敗しました: {{error}}",
   "Upload Image": "画像をアップロード",
   "Upload Reference Image": "参照画像をアップロード",
