--- a/src/renderer/i18n/locales/ko/translation.json
+++ b/src/renderer/i18n/locales/ko/translation.json
@@ -256,6 +256,7 @@
   "Disabled": "비활성화됨",
   "Discard Changes": "변경 취소",
   "Discard Changes?": "변경사항을 버리시겠습니까?",
+  "Dismiss": "무시하기",
   "display": "표시",
   "Display": "표시",
   "Display Settings": "디스플레이 설정",
@@ -813,6 +814,7 @@
   "Untitled": "제목 없음",
   "Update Available": "업데이트 가능",
   "Upgrade": "업그레이드",
+  "Upload": "업로드",
   "Upload failed: {{error}}": "업로드 실패: {{error}}",
   "Upload Image": "이미지 업로드",
   "Upload Reference Image": "참조 이미지 업로드",
