--- a/src/renderer/i18n/locales/nb-NO/translation.json
+++ b/src/renderer/i18n/locales/nb-NO/translation.json
@@ -256,6 +256,7 @@
   "Disabled": "Deaktivert",
   "Discard Changes": "Forkast endringer",
   "Discard Changes?": "Forkast endringer?",
+  "Dismiss": "Avvis",
   "display": "visning",
   "Display": "Vis",
   "Display Settings": "Visningsinnstillinger",
@@ -812,6 +813,7 @@
   "Untitled": "Uten tittel",
   "Update Available": "Oppdatering tilgjengelig",
   "Upgrade": "Oppgrader",
+  "Upload": "Last opp",
   "Upload failed: {{error}}": "Opplasting mislyktes: {{error}}",
   "Upload Image": "Last opp bilde",
   "Upload Reference Image": "Last opp referansebilde",
