--- a/src/renderer/i18n/locales/pt-PT/translation.json
+++ b/src/renderer/i18n/locales/pt-PT/translation.json
@@ -256,6 +256,7 @@
   "Disabled": "Desabilitado",
   "Discard Changes": "Descartar Alterações",
   "Discard Changes?": "Descartar Alterações?",
+  "Dismiss": "Descartar",
   "display": "Exibir",
   "Display": "Exibir",
   "Display Settings": "Definições de Exibição",
@@ -811,6 +812,7 @@
   "Untitled": "Sem Título",
   "Update Available": "Atualização disponível",
   "Upgrade": "Atualizar",
+  "Upload": "Carregar",
   "Upload failed: {{error}}": "Carregamento falhou: {{error}}",
   "Upload Image": "Carregar Imagem",
   "Upload Reference Image": "Carregar imagem de referência",
