--- a/src/renderer/i18n/locales/ru/translation.json
+++ b/src/renderer/i18n/locales/ru/translation.json
@@ -256,6 +256,7 @@
   "Disabled": "Отключено",
   "Discard Changes": "Отменить изменения",
   "Discard Changes?": "Отменить изменения?",
+  "Dismiss": "Отклонить",
   "display": "дисплей",
   "Display": "Отображение",
   "Display Settings": "Настройки отображения",
@@ -813,6 +814,7 @@
   "Untitled": "Без названия",
   "Update Available": "Доступно обновление",
   "Upgrade": "Обновить",
+  "Upload": "Загрузить",
   "Upload failed: {{error}}": "Не удалось загрузить: {{error}}",
   "Upload Image": "Загрузить изображение",
   "Upload Reference Image": "Загрузить опорное изображение",
