--- a/src/renderer/i18n/locales/sv/translation.json
+++ b/src/renderer/i18n/locales/sv/translation.json
@@ -256,6 +256,7 @@
   "Disabled": "Inaktiverad",
   "Discard Changes": "Ignorera ändringar",
   "Discard Changes?": "Kassera ändringar?",
+  "Dismiss": "Avvisa",
   "display": "visa",
   "Display": "Visa",
   "Display Settings": "Skärminställningar",
@@ -813,6 +814,7 @@
   "Untitled": "Namnlös",
   "Update Available": "Uppdatering tillgänglig",
   "Upgrade": "Uppgradera",
+  "Upload": "Ladda upp",
   "Upload failed: {{error}}": "Uppladdning misslyckades: {{error}}",
   "Upload Image": "Ladda upp bild",
   "Upload Reference Image": "Ladda upp referensbild",
