--- a/src/renderer/i18n/locales/zh-Hant/translation.json
+++ b/src/renderer/i18n/locales/zh-Hant/translation.json
@@ -256,6 +256,7 @@
   "Disabled": "已停用",
   "Discard Changes": "捨棄變更",
   "Discard Changes?": "捨棄變更？",
+  "Dismiss": "關閉",
   "display": "顯示",
   "Display": "顯示",
   "Display Settings": "顯示設定",
@@ -818,6 +819,7 @@
   "Untitled": "未命名",
   "Update Available": "更新可用",
   "Upgrade": "升級",
+  "Upload": "上傳",
   "Upload failed: {{error}}": "上傳失敗：{{error}}",
   "Upload Image": "上傳圖片",
   "Upload Reference Image": "上傳參考圖片",
