--- a/src/renderer/i18n/locales/zh-Hans/translation.json
+++ b/src/renderer/i18n/locales/zh-Hans/translation.json
@@ -258,6 +258,7 @@
   "Disabled": "禁用",
   "Discard Changes": "放弃更改",
   "Discard Changes?": "放弃更改？",
+  "Dismiss": "忽略",
   "display": "显示",
   "Display": "显示",
   "Display Settings": "显示设置",
@@ -826,6 +827,7 @@
   "Untitled": "未命名",
   "Update Available": "更新可用",
   "Upgrade": "升级",
+  "Upload": "上传",
   "Upload failed: {{error}}": "上传失败：{{error}}",
   "Upload Image": "上传图片",
   "Upload Reference Image": "上传参考图片",
